# zeroscaler

./: .gitignore  .jsii  .npmignore  README.md  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-lambda.yml  dependabot-auto-merge.yml  deploy-boot-fargate.yml
boot-fargate/: Cargo.toml
boot-fargate-lambda/: Cargo.toml  README.md
boot-fargate-lambda/src/: main.rs
boot-fargate/src/: lib.rs
boot_fargate_lambda/: Cargo.toml
boot_fargate_lambda/src/: main.rs
boot_fargate_lambda/tests/: integration.rs
lib/: index.ts
test/: zeroscaler.test.ts
zeroscaler/: README.md  Zeroscaler.go  ZeroscalerProps.go  Zeroscaler__checks.go  Zeroscaler__no_checks.go  go.mod  main.go
zeroscaler/jsii/: jsii.go  zeroscaler-zeroscaler-cdk-0.1.2.tgz
